--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -22,20 +22,19 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
-dock_6_selected_tab_idx=0
-dock_9_selected_tab_idx=5
+dock_split_1=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Signals,Groups"
-dock_6="History"
-dock_9="Output,Debugger,Audio,Animation,Shader Editor,TileMap,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,Replication,GridMap"
+dock_5="Inspector,Signals,History,Groups"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/enemy.tscn", "res://scenes/start_menu.tscn", "res://scenes/menu.tscn")
-current_scene="res://scenes/world.tscn"
+current_scene="res://scenes/enemy.tscn"
 center_split_offset=-501
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 bottom_panel_offsets={
@@ -58,7 +57,7 @@ position=Vector2i(0, 45)
 [ScriptEditor]
 
 open_scripts=["res://scripts/player/attack.gd", "res://scripts/enemy.gd", "res://export_presets.cfg", "res://scripts/player/idle.gd", "res://scripts/menu.gd", "res://scripts/player/move.gd", "res://scripts/player/player.gd", "res://scripts/spawner/spawner.gd", "res://scripts/start_menu.gd", "res://scripts/state.gd", "res://scripts/player/state_machine.gd"]
-selected_script="res://export_presets.cfg"
+selected_script="res://scripts/player/attack.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -83,8 +82,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://export_presets.cfg")
-uncollapsed_paths=PackedStringArray("res://")
+selected_paths=PackedStringArray("res://")
+uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://addons/")
 
 [docks/History]
 
