--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTr
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/player.tscn", "res://scenes/enemy.tscn", "res://scenes/start_menu.tscn", "res://scenes/menu.tscn")
-current_scene="res://scenes/enemy.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=-501
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -56,9 +56,9 @@ position=Vector2i(0, 45)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player/attack.gd", "res://scripts/enemy.gd", "res://export_presets.cfg", "res://scripts/player/idle.gd", "res://scripts/menu.gd", "res://scripts/player/move.gd", "res://scripts/player/player.gd", "res://scripts/spawner/spawner.gd", "res://scripts/start_menu.gd", "res://scripts/state.gd", "res://scripts/player/state_machine.gd"]
-selected_script="res://scripts/player/attack.gd"
-open_help=[]
+open_scripts=["res://scripts/player/attack.gd", "res://scripts/enemy.gd", "res://scripts/player/idle.gd", "res://scripts/menu.gd", "res://scripts/player/move.gd", "res://scripts/player/player.gd", "res://scripts/spawner/spawner.gd", "res://scripts/start_menu.gd", "res://scripts/player/state.gd", "res://scripts/player/state_machine.gd"]
+selected_script="res://scripts/player/player.gd"
+open_help=["AnimatedSprite2D"]
 script_split_offset=400
 list_split_offset=0
 zoom_factor=1.0
@@ -82,8 +82,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://")
-uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://addons/")
+selected_paths=PackedStringArray("res://scripts/spawner/spawner.gd")
+uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/spawner/", "res://scripts/player/", "res://scenes/", "res://addons/")
 
 [docks/History]
 
