--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 38,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 15.0,
+"row": 36,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 40,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 7.733333333333334,
+"row": 29,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -68,29 +68,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": PackedInt32Array(),
-"h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scripts/spawner/spawner.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 16,
 "folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 5,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -150,4 +136,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "ConfigFile"
+}
+
+[res://scripts/player/state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": PackedInt32Array(),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
