--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,12 +1,4 @@
 list=[{
-"base": &"Node",
-"class": &"State",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://scripts/state.gd"
-}, {
 "base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
@@ -14,4 +6,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/player/player.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/player/state.gd"
 }]
